# FHIR-MCP-data-bridge

./: .env.example  .gitignore  FHIR-MCP Bridge _ Clinical Intelligence Platform.html  IMPLEMENTATION_COMPLETE.md  Implementation Plan v3.1  Implementation Plan v4  Industry Briefing  LIGHT_THEME_CONVERSION_COMPLETE.md  Pathology Report  README.md  USER_MANUAL.md  V3_DESIGN_OVERHAUL_PROMPT.md  V3_PRO_MAX_IMPLEMENTATION_PROMPT.md  V3_PRO_MAX_V2_FULL_PROMPT.md  debug_client.py  pyproject.toml  run_server.py  test_runner.py
.claude/: launch.json
data/: icd10_codes.json  loinc_common.json  rxnorm_common.json  snomed_common.json
docs/: CASE_STUDY.md
src/fhir_mcp/: main.py  server.py
src/fhir_mcp/api/: rest_routes.py
src/fhir_mcp/config/: constants.py  settings.py
src/fhir_mcp/middleware/: observability.py
src/fhir_mcp/models/: intelligence_models.py  tool_inputs.py
src/fhir_mcp/services/: auth_manager.py  fhir_client.py  icd10_service.py  query_builder.py  response_mapper.py  service_factory.py  terminology_service.py
src/fhir_mcp/tools/: composite.py  fhir_resources.py  terminology.py
src/fhir_mcp/utils/: errors.py  logging.py
tests/: conftest.py  test_fhir_client.py  test_tools.py
v3-ehr-simulator/: DESIGN_SYSTEM.md  HANDOFF_SPEC.md  package-lock.json  package.json  tailwind.config.js  vercel.json
v3-ehr-simulator/src/app/: globals.css  layout.tsx  page.tsx
v3-ehr-simulator/src/components/: AgentPlan.tsx  CommandPalette.tsx  DataStream.tsx  DemoProgressBar.tsx  PatientTimeline.tsx  (+1 more)
web-app/: .env.local  index.html
web-app/src/: App.tsx
(+13 files in other folders)
