[project]
name = "fhir-mcp-server"
version = "1.0.0"
description = "FHIR R4 MCP Server for healthcare AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.4.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "cachetools>=5.3.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
fhir-mcp-server = "fhir_mcp.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
